fix(ui): add background on body to prevent white lines between sections on mobile

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -7,7 +7,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: var(--font-family-primary);
-  /*background-color: var(--color-primary);*/
+  background-color: var(--blue-950);
   color: var(--text-primary);
 }
 
